fix overlaping

--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     gap: 2rem;
-    padding: 4rem 0;
+    padding: 4rem 0 6rem 0;
 }
 
 .card {
